--- a/Calculator/app/src/main/res/layout/activity_main.xml
+++ b/Calculator/app/src/main/res/layout/activity_main.xml
@@ -148,9 +148,9 @@
         android:layout_height="60dp"
         android:backgroundTint="@color/white"
         android:gravity="center"
-        android:text="x"
+        android:text="×"
         android:textColor="@color/black"
-        android:textSize="34sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/button16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -266,14 +266,15 @@
         android:layout_height="60dp"
         android:backgroundTint="@color/white"
         android:gravity="center"
-        android:text="x^2"
+        android:text="x²"
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/button1trenX"
         app:layout_constraintEnd_toStartOf="@+id/buttonCanX"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button1trenX"
-        app:layout_constraintTop_toTopOf="@+id/button1trenX" />
+        app:layout_constraintTop_toTopOf="@+id/button1trenX"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonCanX"
@@ -508,6 +509,7 @@
         android:id="@+id/imageButton3"
         android:layout_width="69dp"
         android:layout_height="60dp"
+        android:backgroundTint="#FFFFFF"
         android:src="@drawable/ic_baseline_history_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
